HS-836: Use new Monitor Type AZURE in Monitor and Collector (#647)